src/widget/widget.css
/**
             * (optional) define here the style definitions which should be applied on the slider container
             * e.g. width including further controls like arrows etc.
             */
.slider {
}

.frame {
  /**
                  * (optional) wrapper width, specifies width of the slider frame.
                  */
  width: 100vw;
  height: 75vh;
  position: relative;
  font-size: 24px;
  overflow: hidden;
  white-space: nowrap;
}

.slides {
  display: inline-block;
}

li {
  position: relative;
  display: inline-block;

  /**
                  * (optional) if the content inside the slide element has a defined size.
                  */
  width: 100vw;
}

.prev,
.next {
  position: absolute;
  top: 50%;
  margin-top: -25px;
  display: block;
  cursor: pointer;
}

.next {
  right: 0;
}

.prev {
  left: 0;
}

.next svg,
.prev svg {
  width: 25px;
}

#container {
  height: 100vh;
}

.js_slide {
  height: 74.54vh;
  background: #333333;
  background-size: cover;
  background-position: center;
}

.slide-img {
  width: 100%;
}

ul {
  -webkit-padding-start: 0px;
}

@keyframes test {
  from {
  margin-top: 0px;
  }
  to {
  font-size: 36px;   
  background: #eef0f0;
  flex: 1.5;
  margin-top: -10px;
  }
}

#dot-nav > .active {
  /* background: #eef0f0; */
  color: black;
  flex: 1;
  font-size: 24px;
  animation-name: test;
  animation-duration: .25s;
  animation-fill-mode: forwards;
  /* margin-top: 0px; */

}

#dot-nav > li {
  flex: 1;
  text-align: center;
  line-height: 10vh;
  font-size: 20px;
  color: #ffffff;
  background: #333333;
}

#dot-nav {
  display: flex;
  height: 10vh;
  margin: 0px;
}

#intro {
  height: 15vh;
  background-position: center !important;
  background-size: cover !important;
  position: relative;
}

#hero {
  position: relative;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
  color: white;
}

.well {
  border: 0px !important;
  border-radius: 0px !important;
  /* border-top-right-radius: 0px !important; */
  height: 100%;
}

.slide-col {
  height: 100% !important;
  padding: 0px !important;
}

.row {
  height: 100%;
}

.container-fluid {
  height: 100%;
  /* padding-left: 0px !important; */
  /* padding-right: 0px !important; */
}

.thumbnail {
  /* flex: 1; */
  height: 50px;
  width: 50px;
  background-size: contain !important;
  margin-bottom: 0px !important;
  /* position: absolute; */
  /* top: 50%; */
  /* left: 50%; */
  /* transform: translate(-50%, -50%); */
}

.header {
  margin-bottom: 5px;
}

.page-content {
  background: #eef0f0;
}

.plugin-panel {
  /* display: flex; */
}

/* .plugin-content {
  flex: 5;
} */

.list-group-item {
  display: flex;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0px !important;
}

/* p {
  white-space: pre-line; */
/* } */

